# kobold_python

./: .gitignore  LICENSE  README.md  do_coverage.sh  publish.sh  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  swap.md
docs/source/: compare.rst  conf.py  doubles.rst  hash_functions.rst  index.rst
kobold/: __init__.py  assertions.py  compare.py  doubles.py  hash_functions.py  html.py  response.py  swap.py
kobold/compare/: __init__.py  assertions.py  hints.py
kobold/tests/: test_assertions.py  test_compare.py  test_doubles.py  test_hash_functions.py  test_swap.py
kobold/tests/compare/: test_list.py
test/: test_doubles.py  test_swap.py
test/compare/: test_structured_string.py
